refactor: refactor code